<resources>
    <string name="app_name">Pdf Viewer</string>
    <string name="developer_name">Created by Sudo Ajay</string>

    <!--    Dark Mode Bottom Sheet-->
    <string name="dark_mode_trans_text">Dark Mode</string>
    <string name="off_trans_text">Off</string>
    <string name="on_trans_text">On</string>
    <string name="automatic_at_sunset_trans_text">Automatic at sunset</string>
    <string name="set_by_battery_saver_trans_text">Set by battery saver</string>
    <string name="system_default_trans_text">System Default</string>

    <!--  MainActivity  Bottom Toolbar-->
    <string name="action_search">Search</string>
    <string name="action_more_option">More Option</string>

    <!-- callPermissionDialog (External Storage Permission)-->
    <string name="activity_custom_dialog_permission_TextView1">App Permission</string>
    <string name="activity_custom_dialog_permission_TextView2">In Android 6+ Apps will ask for
        permission once you start using them.</string>
    <string name="readMoreButton">Read More</string>
    <string name="continueButton">Continue</string>
    <string name="reportIt">There is Error Please Report It</string>
    <string name="selectExternalMes">Only Select the Internal Card Directory</string>
    <string name="giveUsPermission">Give us permission for further process</string>


    <!--   callPermissionDialog (Sd Card Storage Permission)  -->
    <string name="selectSdCardMes">Only Select the Sd Card Directory</string>
    <string name="wrongDirectorySelected">You select the wrong directory</string>
    <string name="supportAboveSdCard">Sorry , We don\'t support sd card at this android version </string>


    <!--    Delete Cache-->
    <string name="successfully_cache_data_is_deleted_text">Successfully Cache Data Is Deleted</string>

    <!--    Delete File-->
    <string name="successfully_file_deleted_text">Successfully File Deleted</string>

    <!--    BottomSheetDialog select option-->
    <string name="select_option_trans_text">Select Option</string>
    <string name="scan_file_trans_text">Scan File</string>
    <string name="select_file_trans_text">Select File</string>

    <!--    Filter Pdf Bottom Sheet -->
    <string name="filter_option_text">Filter Option</string>
    <string name="title_menu_order_by_trans">Order by</string>
    <string name="filter_by_alphabetical_order_trans">Alphabetical order</string>
    <string name="filter_by_installation_date_order_trans">Installation Date</string>
    <string name="filter_by_pdf_size_order_trans">Pdf Size</string>

    <!--    Share Pdf File -->
    <string name="share_pdf_file_text">Share Pdf File</string>
    <string name="share_pdf_file_loading_text">Sharing Pdf File…</string>


    <!--    Web View-->
    <!--    Error When Opening Url -->
    <string name="submit_error_text">Error ! Please try to submit the error</string>

    <!--    Open file-->
    <string name="cannot_open_file_chooser_text">Cannot Open File Chooser</string>
    <string name="select_pdf_file_text">Select Pdf File</string>
    <string name="failed_to_open_file_text">Failed to open file</string>

    <!--    Download File-->
    <string name="downloading_not_suppoted_text">Download option is not supported</string>


    <!--    Option menu-->
    <string name="darkMode_optionMenu">Dark Mode</string>
    <string name="refresh_optionMenu">Refresh</string>
    <string name="filePicker_optionMenu">File Picker</string>
    <string name="more_setting_optionMenu">More Setting</string>

    <!--    Changes In Database-->
    <string name="filter_changes_text">filterChanges</string>

    <!--    Empty List -->
    <string name="empty_list_text"> No Pdf Found </string>


    <!--    More Option Menu Item-->
    <string name="open_menuOption">Open</string>
    <string name="shareFile_menuOption">Share File</string>
    <string name="deleteFile_menuOption">Delete File</string>
    <string name="shortcut_menuOption">Shortcut</string>

    <!--    Setting Preference-->
    <string name="system_setting_text">System Settings</string>
    <string name="use_dark_mode_text">Use Dark Mode</string>
    <string name="change_language_text">"Change Language "</string>
    <string name="clear_cache_text">Clear Cache</string>
    <string name="help_support_text">Help &amp; Support</string>
    <string name="privacy_policy_text">Privacy Policy</string>
    <string name="report_a_bug_text">Report A Bug</string>
    <string name="report_a_bug_summary_text">submit an issue on Github issue page</string>
    <string name="send_feedback_text">Send Feedback</string>
    <string name="send_feedback_summary_text">submit feedback to fix the app bug</string>
    <string name="more_info_text">More Info</string>
    <string name="share_app_text">Share App</string>
    <string name="rate_use_text">Rate-Us</string>
    <string name="more_app_text">More App</string>
    <string name="about_app_text">About App</string>

    <string name="title_activity_settings">Setting</string>

<!--    Send Feedback -->
    <string name="feedbackEditTextHint">Please write your feedback</string>
    <string name="feedbackEditTextError">Please write something in feedback</string>
    <string name="systemInfo_text">Your System Info will be send to our developer team</string>
    <string name="add_screenshot_text">+ Add Screenshot</string>
    <string name="ok_text">OK</string>


    <!--    Network Provider-->
    <string name="wifi_text">Wifi</string>
    <string name="mobile_data_text">Mobile Data</string>
    <string name="vpn_text">Vpn</string>
    <string name="no_internet_text">No Internet</string>

    <!--    System Info-->
    <string name="system_info_text"> System Info </string>
    <string name="device_text">Device : </string>
    <string name="os_api_level_text">Os Api Level : </string>
    <string name="app_version_text">App Version : </string>
    <string name="language_text">Language : </string>
    <string name="total_memory_text">Total Heap Memory : </string>
    <string name="free_memory_text">Free Heap Memory : </string>
    <string name="screen_Text">Screen Size : </string>
    <string name="network_type_text">Network Type : </string>

    <!--    Share App-->
    <string name="shareMessage">Hey, check This App which helps you to Delete Duplicate and Unnecessary Data from the phone -</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="share_app_summary_text">share the play store app link</string>
    <string name="rate_use_summary_text">express your experience through rating</string>
    <string name="more_app_summary_text">there is more app out there</string>
    <string name="about_app_summary_text">open github link</string>

<!--    notification tile -->
    <string name="open_close_pdf_text">Open Recent Pdf</string>
    <string name="open_pdf_file_text">Open Recent PDF </string>
    <string name="close_pdf_file_text">Close Recent PDF</string>
    <string name="added_text">added </string>
    <string name="removed_text">removed </string>
    <string name="error_no_recent_pdf_file">You did not open any pdf file recently</string>

<!--    Delete Alert Dialog-->
    <string name="confirm_delete_title_text">Confirm Delete....</string>
    <string name="delete_message_text">Are you sure you want to delete from storage ?</string>


<!--    Notification channel-->
    <string name="notifications_group_service">Service control</string>
    <string name="firebase_channel_id" translatable="false">Push Notification</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

<!--    scan sd card-->
    <string name="scan_sd_card_text">Detect Sd Card</string>
    <string name="confirm_sd_card_permission_title_text">Detected Sd Card !!</string>
    <string name="sd_card_permission_text">Select Sd Card storage For further Scanning Process</string>


    <!--        No Trans-->

    <!--    Dark Mode No Trans-->
    <string name="dark_mode_text" translatable="false">Dark Mode</string>
    <string name="is_dark_mode_text" translatable="false">isDarkMode</string>
    <string name="off_text" translatable="false">Off</string>
    <string name="on_text" translatable="false">On</string>
    <string name="automatic_at_sunset_text" translatable="false">Automatic at sunset</string>
    <string name="set_by_battery_saver_text" translatable="false">Set by battery saver</string>
    <string name="system_default_text" translatable="false">System Default</string>

    <!--    External Storage & Sd Card Storage No Trans-->
    <string name="external_path_text" translatable="false">External Path</string>
    <string name="external_uri_text" translatable="false">External Uri</string>
    <string name="sdCard_path_text" translatable="false">SdCard Path</string>
    <string name="sdCard_uri_text" translatable="false">SdCard Uri</string>


    <!--    BottomSheetDialog select option-->
    <string name="select_option_text" translatable="false">Select Option</string>
    <string name="scan_file_text" translatable="false">Scan File</string>
    <string name="select_file_text" translatable="false">Select File</string>


    <!--    Filter Pdf Bottom Sheet -->
    <string name="title_menu_order_by" translatable="false">Order by</string>
    <string name="filter_by_alphabetical_order" translatable="false">Alphabetical order</string>
    <string name="filter_by_installation_date_order" translatable="false">Installation Date</string>
    <string name="filter_by_pdf_size_order" translatable="false">Pdf Size</string>



<!--    tile  setting-->
    <string name="is_pdf_active_text" translatable="false">isPdfActive</string>

    <!--    save pdf recent pdf path-->
    <string name="pdf_path_1_text" translatable="false">Pdf Path 1</string>
    <string name="pdf_path_2_text" translatable="false">Pdf Path 2</string>
    <string name="pdf_path_3_text" translatable="false">Pdf Path 3</string>


<!--    sd card first time detect-->
    <string name="first_time_sd_card_detect" translatable="false">isFirstTimeSdCardDetect</string>



</resources>