<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bottomToolbar_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:iconTint="?attr/bottomItemTintColor"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/darkMode_optionMenu"
        android:title="@string/darkMode_optionMenu" />

    <item
        android:id="@+id/refresh_optionMenu"
        android:title="@string/refresh_optionMenu" />
    <item
        android:id="@+id/filePicker_optionMenu"
        android:title="@string/filePicker_optionMenu" />
    <item
        android:id="@+id/moreSetting_optionMenu"
        android:title="@string/moreSetting_optionMenu" />



</menu>