<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="bottomSheet"
            type="com.sudoajay.pdfviewer.activity.mainActivity.SelectOptionBottomSheet" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/mainBgColor"
        android:paddingBottom="32dp">

        <View
            android:id="@+id/view"
            android:layout_width="35dp"
            android:layout_height="5dp"
            android:layout_marginTop="@dimen/heading_view_marginTop"
            android:background="@drawable/bottom_sheet_top_effect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/filterOption_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_margin_gap"
            android:text="@string/select_option_trans_text"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="?attr/fadeTextColor"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/alphabeticalOrder_ConstraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/gap_margin_left_right"
            android:layout_marginEnd="8dp"
            android:onClick="@{() -> bottomSheet.setValue(@string/scan_file_text)}"
            android:background="?selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filterOption_TextView">

            <TextView
                android:id="@+id/alphabeticalOrder_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_margin_left_right"
                android:layout_marginTop="@dimen/text_view_margin_gap"
                android:layout_marginBottom="@dimen/text_view_margin_gap"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/scan_file_trans_text"
                android:textColor="?attr/headingNormalTextColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/alphabeticalOrder_ImageView"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/alphabeticalOrder_ImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_margin_left_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/scan_file_icon"
                app:tint="?attr/headingNormalTextColor"
                tools:ignore="ContentDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/installationDate_ConstraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/text_view_margin_gap"
            android:layout_marginEnd="8dp"
            android:onClick="@{() -> bottomSheet.setValue(@string/select_file_text)}"
            android:background="?selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alphabeticalOrder_ConstraintLayout">

            <TextView
                android:id="@+id/installationDate_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_margin_left_right"
                android:layout_marginTop="@dimen/text_view_margin_gap"
                android:layout_marginBottom="@dimen/text_view_margin_gap"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/select_file_trans_text"
                android:textColor="?attr/headingNormalTextColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/installationDate_ImageView"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/installationDate_ImageView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/gap_margin_left_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/select_file_icon"
                app:tint="?attr/headingNormalTextColor"
                tools:ignore="ContentDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>